# tydi-lang-2

./: .gitignore  Cargo.toml  readme.md  tydi-lang2-syntax.md
tydi-lang-complier/: Cargo.toml
tydi-lang-complier/src/: main.rs  project.rs  project_description.rs  project_make.rs  test.rs
tydi-lang-json-generator/: Cargo.toml
tydi-lang-json-generator/src/: global_values.rs  json_representation_all.rs  json_representation_implementation.rs  json_representation_logic_type.rs  json_representation_streamlet.rs  json_representation_value.rs  lib.rs  name_conversion.rs  serde_serialization.rs  test_project.rs  util.rs
tydi-lang-parser/: Cargo.toml
tydi-lang-parser/src/: deep_clone.rs  error.rs  evaluation.rs  generate_name.rs  lib.rs  name_trait.rs  post_compile.rs  serde_arc_rwlock_inner.rs  serde_arc_rwlock_name.rs  serde_serialization.rs  test_project.rs  test_tydi_parser.rs  trait_common.rs  tydi_lang_grammar_exp.pest  tydi_lang_src_to_memory_representation.rs  tydi_memory_representation.rs  tydi_parser.rs  util.rs
tydi-lang-parser/src/evaluation/: evaluate_function.rs  evaluate_impl.rs  evaluate_logic_flow.rs  evaluate_logic_type.rs  evaluate_scope.rs  evaluate_streamlet.rs  evaluate_var.rs  evaluator.rs  evulation_test.rs  exp.rs  operation.rs  predefined_function.rs  template_expansion.rs  term.rs
tydi-lang-parser/src/post_compile/: check_assert.rs  sugaring_auto_insertion_duplicator_voider.rs
tydi-lang-parser/src/tydi_lang_src_to_memory_representation/: parse_file.rs  parse_implementation.rs  parse_logic_flow.rs  parse_logic_type.rs  parse_miscellaneous.rs  parse_statement.rs  parse_streamlet.rs  parse_template.rs  parse_type.rs  parse_var.rs
tydi-lang-parser/src/tydi_memory_representation/: attributes.rs  code_location.rs  function.rs  identifier.rs  if_for.rs  net.rs  (+13 more)
(+4 files in other folders)
