[package]
name = "tydi-lang-complier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tydi-lang-parser = { path= "../tydi-lang-parser" }
serde = { version = "1.0.160", features = ["derive"] }
toml = "0.7.3"