[package]
name = "tydi-lang-complier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tydi-lang-parser = { path= "../tydi-lang-parser" }
tydi-lang-json-generator = { path= "../tydi-lang-json-generator" }
serde = { version = "1.0.160", features = ["derive"] }
toml = "0.7.3"
clap = { version = "4.4.14", features = ["derive", "cargo"] }