[package]
name = "tydi-lang-json-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
tydi-lang-parser = { path= "../tydi-lang-parser" }
rand = "0.8.5"