[package]
name = "tydi-lang-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.5.7"
pest_derive = "2.5.7"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
rand = "0.8.5"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
lazy_static = "1.4.0"